--- a/configs/cartpole.yaml
+++ b/configs/cartpole.yaml
@@ -88,7 +88,8 @@ reward:
     validation_ratio: 0.2         # ratio of validation set
 
 
-# "Trajectory-wise Multiple Choice Learning for Dynamics Generalization in Reinforcement Learning" parameters
+# "Trajectory-wise Multiple Choice Learning for Dynamics Generalization
+# in Reinforcement Learning" parameters
 TW:
   history_length: 10
   future_length: 10
