--- a/configs/cartpole.yaml
+++ b/configs/cartpole.yaml
@@ -1,11 +1,17 @@
 # Environment configuration
-env: SunblazeCartPole-v0          # env name
+env: CarpoleBalance          # env name
 train_params:                     # model contexts for training
-- p1: [0.25, 0.5, 1.5, 2.5]
-  p2: [1.0]
+- masscart: [0.25, 0.5, 1.5, 2.5]
+  masspole: [0.5, 1.0, 1.5, 2.0]
+  polelength: [0.3, 0.5, 0.7]
+  gravity: [6.8, 9.8, 12.8]
+  force_mag: [5.0, 10.0, 15.0]
 test_range:                       # model contexts for testing
-- p1: [0.1, 0.15]
-  p2: [2.75, 3.0]
+- masscart: [1.5, 2.5]
+  masspole: [1.5, 2.0]
+  polelength: [0.5, 0.7]
+  gravity: [9.8, 12.8]
+  force_mag: [10.0, 15.0]
 n_itr: 10                         # number of time to re-run tests
 normalize_flag: False             # normalize state
 
