--- a/configs/cartpole_su.yaml
+++ b/configs/cartpole_su.yaml
@@ -1,25 +1,30 @@
 # Environment configuration
-env: CartpoleSwingUp          # env name
+env: CartpoleSwingUp              # env name
 train_params:                     # model contexts for training
-- masscart: [0.5, 1.0]
-  masspole: [0.5, 1.0]
-  # polelength: [0.4, 0.6]
-  gravity: [9.8, 12.0]
-  force_mag: [20.0, 22.0]
+- polelength: [0.4, 0.6]
+  # masspole: [0.5, 1.5]
+  # masscart: [0.25, 0.5, 1.5, 2.5]
+  # gravity: [8.8, 12.0]
+  # force_mag: [18.0, 22.0]
 test_range:                       # model contexts for testing
-- masscart: [1.5, 2.5]
+- polelength: [0.5, 0.7]
   masspole: [1.5, 2.0]
-  # polelength: [0.5, 0.7]
+  masscart: [1.5, 2.5]
   gravity: [9.8, 12.8]
   force_mag: [10.0, 15.0]
 normalize_flag: True              # normalize input
+
 trail_length: 200                 # max len of episode
-num_trials: 10                    # Number of episodes
+init_trials: 50                   # Number of initial trials to fill replay buffer
+num_trials: 50                    # Number of episodes w/ agent actions
+replay_buffer_sz: 10000
+
+reward_fn: False                  # Use reward function or not
 
 # Agent configuration
 agent:
-  horizon: 15                     # how long of the horizon to predict
-  popsize: 500                    # how many random samples for mpc
+  horizon: 30                     # how long of the horizon to predict
+  popsize: 200                    # how many random samples for mpc
   alpha: 0.1
   replan_freq: 1
   num_iters: 5
@@ -28,27 +33,36 @@ agent:
 
 # Model arch parameters
 context:
+  history_size: 50
   hidden_dim: 200
-  hidden_layers: 3
-  out_dim: 128
-  history_size: 32
+  hidden_layers: 1
+  out_dim: 16
+  hidden_actv: relu
+  output_actv: identity
   no_context: False
 
-backbone:
-  hidden_dim: 128
-  hidden_layers: 3
-  out_dim: 64
+stateaction:
+  hidden_dim: 200
+  hidden_layers: 1
+  out_dim: 256
+  hidden_actv: relu
+  state_actv: identity
+  action_actv: tanh
 
-head:
+transitionreward:
   hidden_dim: 200
   hidden_layers: 3
   ensemble_size: 5
+  prop_method: fixed_model
+  actv: torch.nn.LeakyReLU
 
 # Dynamics model training config
 dynamics:
   learning_rate: 0.001
-  batch_size: 64
+  batch_size: 256
   validation_ratio: 0.05         # ratio of validation set
+  epochs_per_step: 50
+  patience: 20
 
 # "Trajectory-wise Multiple Choice Learning for Dynamics Generalization
 # in Reinforcement Learning" parameters
