--- a/configs/cartpole_su.yaml
+++ b/configs/cartpole_su.yaml
@@ -1,35 +1,40 @@
 # Environment configuration
 env: CartpoleSwingUp              # env name
 train_params:                     # model contexts for training
-- polelength: [0.4, 0.6]
-  # masspole: [0.5, 1.5]
+- polelength: [0.4, 0.6, 0.8, 1., 1.2]
+  masspole: [0.75, 1.0, 1.25]
   # masscart: [0.25, 0.5, 1.5, 2.5]
   # gravity: [8.8, 12.0]
   # force_mag: [18.0, 22.0]
 test_range:                       # model contexts for testing
-- polelength: [0.5, 0.7]
-  # masspole: [1.5, 2.0]
+- polelength: [0.2, 0.5, 0.9, 1.4]
+  masspole: [0.7, 0.9, 1.4]
   # masscart: [1.5, 2.5]
   # gravity: [9.8, 12.8]
   # force_mag: [10.0, 15.0]
 normalize_flag: False              # normalize input
 
 trail_length: 200                 # max len of episode
-init_trials: 30                   # Number of initial trials to fill replay buffer
-num_trials: 30                    # Number of episodes w/ agent actions
+init_trials: 5                   # Number of initial trials to fill replay buffer
+num_trials: 5                    # Number of episodes w/ agent actions
 replay_buffer_sz: 10000
 
 reward_fn: False                  # Use reward function or not
 
 # Agent configuration
 agent:
-  horizon: 30                     # how long of the horizon to predict
+  horizon: 50                     # how long of the horizon to predict
   popsize: 200                    # how many random samples for mpc
   alpha: 0.1
   replan_freq: 1
   num_iters: 5
   elite_ratio: 0.1
   max_particles: 20
+  eval:                           # Properties of action sequence evaluation fn
+    method: kl                # Method to use 'default', 'greedy', 'kl', 'combine'
+    mc_samples: 50                # Samples from context to consider
+    pred_weight: 1.               # Weight for pred_reward
+    kl_weight: 1.                 # Weight for kl_distance
 
 # Model arch parameters
 context:
