--- a/configs/cartpole_su.yaml
+++ b/configs/cartpole_su.yaml
@@ -1,40 +1,62 @@
 # Environment configuration
-env: CartpoleSwingUp              # env name
-train_params:                     # model contexts for training
+# env name
+env: CartpoleSwingUp
+
+# contexts for training
+train_params:
 - polelength: [0.4, 0.6, 0.8, 1., 1.2]
   masspole: [0.75, 1.0, 1.25]
   # masscart: [0.25, 0.5, 1.5, 2.5]
   # gravity: [8.8, 12.0]
   # force_mag: [18.0, 22.0]
-test_range:                       # model contexts for testing
+
+# model contexts for testing
+test_range:
 - polelength: [0.2, 0.5, 0.9, 1.4]
   masspole: [0.7, 0.9, 1.4]
   # masscart: [1.5, 2.5]
   # gravity: [9.8, 12.8]
   # force_mag: [10.0, 15.0]
-normalize_flag: False              # normalize input
+# normalize input (keep False, gives better generalization performance)
+normalize_flag: False
 
-trail_length: 200                 # max len of episode
-init_trials: 5                   # Number of initial trials to fill replay buffer
-num_trials: 5                    # Number of episodes w/ agent actions
+# max len of episode
+trail_length: 200
+# Number of initial trials to fill replay buffer (wo/ agent actions)
+init_trials: 5
+# Number of episodes w/ agent actions
+num_trials: 5
 replay_buffer_sz: 10000
 
-reward_fn: False                  # Use reward function or not
+# Use reward function or not (keep false)
+reward_fn: False
 
 # Agent configuration
 agent:
-  horizon: 50                     # how long of the horizon to predict
-  popsize: 200                    # how many random samples for mpc
+  # how long of the horizon to predict
+  horizon: 50
+  # how many random samples for mpc
+  popsize: 200
   alpha: 0.1
+  # freq of planning
   replan_freq: 1
+  # iters per planning step
   num_iters: 5
+  # fraction of pop to keep for next step
   elite_ratio: 0.1
   max_particles: 20
-  eval:                           # Properties of action sequence evaluation fn
-    method: kl                # Method to use 'default', 'greedy', 'kl', 'combine'
-    mc_samples: 50                # Samples from context to consider
-    pred_weight: 1.               # Weight for pred_reward
-    kl_weight: 1.                 # Weight for kl_distance
+  # Properties of functions used to evaluate action sequence
+  eval:
+    # MC updates to take when updating the model
+    mc_update: 2
+    # Method to use 'default', 'greedy', 'kl', 'combine'
+    method: kl
+    # Samples from context to consider
+    mc_samples: 50
+    # Weight for pred_reward
+    pred_weight: 1.
+    # Weight for kl_distance
+    kl_weight: 1.
 
 # Model arch parameters
 context:
@@ -65,14 +87,9 @@ transitionreward:
 dynamics:
   learning_rate: 0.001
   batch_size: 256
-  validation_ratio: 0.05         # ratio of validation set
+  # ratio of validation set
+  validation_ratio: 0.05
   epochs_per_step: 50
+  # number of epochs to early terminate if loss doesn't decrease by much
+  # (for potentially faster training)
   patience: 20
-
-# "Trajectory-wise Multiple Choice Learning for Dynamics Generalization
-# in Reinforcement Learning" parameters
-TW:
-  history_length: 10
-  future_length: 10
-  state_diff: 0
-  non_adaptive_planning: 0
